--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,30 @@ services:
     - "27017"
     ports:
       - "27017:27017"
+    networks:
+      - webnet
     environment:
       DBA_PASSWORD: 12345
       DBA_USER: user
       DBA_DB: db-gupy
       DB_HOST: db-gupy
+  web:
+    image: node-gupy
+    volumes:
+     - .:/usr/src/app
+     - /usr/src/app/config
+     - /usr/src/app/models
+    expose:
+      - "5432"
+    external_links:
+      - db-gupy
+    ports:
+      - "3000:3000"
+    networks:
+      - webnet
+    restart: always
+    depends_on:
+      - db
+    command: npm run dev
+networks:
+  webnet:
