--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
+    "@hapi/joi": "^17.1.1",
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "bunyan": "^1.8.14",
